--- a/public/project/omdb/client/views/login/login.view.html
+++ b/public/project/omdb/client/views/login/login.view.html
@@ -1,1 +1,11 @@
 <h2>Login</h2>
+
+<input ng-model="model.user.username"
+        class="form-control"
+        placeholder="username"/>
+<input ng-model="model.user.password"
+       type="password"
+       class="form-control"
+       placeholder="password"/>
+
+<button ng-click="model.login(model.user)" class="btn btn-primary btn-block">Login</button>
