--- a/public/project/omdb/client/views/header/header.view.html
+++ b/public/project/omdb/client/views/header/header.view.html
@@ -6,7 +6,7 @@
             <a href="#/login">Login</a>
         </li>
         <li ng-show="currentUser">
-            <a ng-click="model.logout()">Logout</a>
+            <a ng-click="model.logout()" href="#">Logout</a>
         </li>
         <li ng-class="{'active': model.$location.url() == '/search'}"><a href="#/search">Search</a></li>
         <li ng-class="{'active': model.$location.url() == '/profile'}"
