add register controller

--- a/public/project/omdb/client/views/register/register.view.html
+++ b/public/project/omdb/client/views/register/register.view.html
@@ -7,7 +7,7 @@
        type="password"
        class="form-control"
        placeholder="password"/>
-<input ng-model="model.user.password"
+<input ng-model="model.user.password2"
        type="password"
        class="form-control"
        placeholder="verify password"/>
