--- a/public/project/omdb/client/views/search/search.view.html
+++ b/public/project/omdb/client/views/search/search.view.html
@@ -8,3 +8,32 @@
     class="btn btn-primary btn-block">
     Search
 </button>
+
+<!--
+    ng-show hides and shows the content based on a expression but the content is
+    nevertheless in the DOM
+
+    ng-if - content is not even in the DOM. Thus ng-if does not overburden the DOM
+-->
+<div ng-if="model-data">
+    <h3>Search Results</h3>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Poster</th>
+                <th>Title</th>
+                <th>IMDB</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="movie in model.data.Search">
+                <td>
+                    <img ng-src="{{movie.Poster}}"
+                        height="100px"/>
+                </td>
+                <td>{{movie.Title}}</td>
+                <td>{{movie.imdbID}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
