added details view

--- a/public/project/omdb/client/views/header/header.view.html
+++ b/public/project/omdb/client/views/header/header.view.html
@@ -12,10 +12,15 @@
         <li ng-show="currentUser">
             <a ng-click="model.logout()" href="#">Logout</a>
         </li>
-        <li ng-class="{'active': model.$location.url() == '/search'}"><a href="#/search">Search</a></li>
+
         <li ng-class="{'active': model.$location.url() == '/profile'}"
             ng-show="currentUser">
             <a href="#/profile">Profile</a>
+        </li>
+        <li ng-class="{'active': model.$location.url() == '/search'}"><a href="#/search">Search</a></li>
+        <!--show details if the '/details' is somewhere in the URL (the URL contains much more stuff) -->
+        <li ng-class="{'active': model.$location.url().indexOf('/details') >= 0}"
+            ng-show="model.$location.url().indexOf('/details')>=0"><a>Details</a>
         </li>
     </ul>
 </nav>
